TheMightyDude (02 August 2012)
--------------------------------------
Fixed Notice: Undefined variable: l_igb_invalidamount in igb.php

TheMightyDude (31 July 2012)
--------------------------------------
Fixed bug in bounty.php causing a HTTP 500 Internal Server Error when viewed.

TheMightyDude (30 July 2012)
--------------------------------------
Fixed Notice: Use of undefined constant creator - assumed 'creator' in teams.php
Fixed Notice: Undefined variable: l_planet_noscan in attack.php
Fixed GenScore due to error in the code (my bad)

TheKabal (29 July 2012)
--------------------------------------
Bumped version for release
Moved script to external file, and moved the load position for it to footer instead of in the header (improves page render speed in most browsers)
Changed $lang, $langsh, and other related language variables to be just $lang
Index now adds $lang get variable to links, so that a non-logged in user that chooses a language will get the language they chose until they login
Moved faq from docs to main game directory, change from html to php so that it will be able to offer different link backs (to index or to main)
Moved faq css out to main.css
Recoded the links for new player, rankings, faq, settings, and news so they will respect the language choice from the index page
Added the "forgot password" text into language files with translations
Added correct code for removing session / truly logging out player

TheMightyDude (29 July 2012)
--------------------------------------
Fixed Notice: Undefined variable: _cmb_hehasnofighterleft in combat.php
Fixed Notice: Undefined variable: l_special_port in galaxy.php
Fixed Notice: Use of undefined constant time - assumed 'time' in igb.php
Fixed Notice: Use of undefined constant character_name - assumed 'character_name' in igb.php
Fixed Notice: Use of undefined constant balance - assumed 'balance' in igb.php
Fixed Notice: Undefined variable: num_links in lrscan.php