@@ -53,7 +53,7 @@ while (!$sql->EOF)
             $planetcount = 50;
             $name = get_player_name($row['owner']);
             $l_news_p_headline2=str_replace("[player]",$name,$l_news_p_headline);
-            $headline = $l_news_p_headline2 . " " . $planetcount . $l_news_planets;
+            $headline = $l_news_p_headline2 ." ". $planetcount ." ". $l_news_planets;
             $l_news_p_text502=str_replace("[name]",$name,$l_news_p_text50);
             $news = $db->Execute("INSERT INTO {$db->prefix}news (headline, newstext, user_id, date, news_type) VALUES (?, ?, ?, NOW(), 'planet50');", array($headline, $l_news_p_text502, $row['owner']));
             db_op_result ($db, $news, __LINE__, __FILE__, $db_logging);
@@ -69,7 +69,7 @@ while (!$sql->EOF)
             $planetcount = 25;
             $name = get_player_name($row['owner']);
             $l_news_p_headline2=str_replace("[player]",$name,$l_news_p_headline);
-            $headline = $l_news_p_headline2 . " " . $planetcount . $l_news_planets;
+            $headline = $l_news_p_headline2 ." ". $planetcount ." ". $l_news_planets;
             $l_news_p_text252=str_replace("[name]",$name,$l_news_p_text25);
             $news = $db->Execute("INSERT INTO {$db->prefix}news (headline, newstext, user_id, date, news_type) VALUES (?, ?, ?, NOW(), 'planet25');", array($headline, $l_news_p_text252, $row['owner']));
             db_op_result ($db, $news, __LINE__, __FILE__, $db_logging);
@@ -85,7 +85,7 @@ while (!$sql->EOF)
             $planetcount = 10;
             $name = get_player_name($row['owner']);
             $l_news_p_headline2=str_replace("[player]",$name,$l_news_p_headline);
-            $headline = $l_news_p_headline2 . " " . $planetcount . $l_news_planets;
+            $headline = $l_news_p_headline2 ." ". $planetcount ." ". $l_news_planets;
             $l_news_p_text102=str_replace("[name]",$name,$l_news_p_text10);
             $news = $db->Execute("INSERT INTO {$db->prefix}news (headline, newstext, user_id, date, news_type) VALUES (?, ?, ?, NOW(), 'planet10');", array($headline, $l_news_p_text102, $row['owner']));
             db_op_result ($db, $news, __LINE__, __FILE__, $db_logging);
@@ -101,7 +101,7 @@ while (!$sql->EOF)
             $planetcount = 5;
             $name = get_player_name($row['owner']);
             $l_news_p_headline2=str_replace("[player]",$name,$l_news_p_headline);
-            $headline = $l_news_p_headline2 . " " . $planetcount . $l_news_planets;
+            $headline = $l_news_p_headline2 ." ". $planetcount ." ". $l_news_planets;
             $l_news_p_text52=str_replace("[name]",$name,$l_news_p_text5);
             $news = $db->Execute("INSERT INTO {$db->prefix}news (headline, newstext, user_id, date, news_type) VALUES (?, ?, ?, NOW(), 'planet5');", array($headline, $l_news_p_text52, $row['owner']));
             db_op_result ($db, $news, __LINE__, __FILE__, $db_logging);
@@ -129,7 +129,7 @@ while (!$sql->EOF)
             $colcount = 1000;
             $name = get_player_name($row['owner']);
             $l_news_p_headline2=str_replace("[player]",$name,$l_news_p_headline);
-            $headline = $l_news_p_headline2 . $colcount . " " . $l_news_cols;
+            $headline = $l_news_p_headline2 ." ". $colcount ." ". $l_news_cols;
             $l_news_c_text10002=str_replace("[name]",$name,$l_news_c_text1000);
             $news = $db->Execute("INSERT INTO {$db->prefix}news (headline, newstext, user_id, date, news_type) VALUES (?, ?, ?, NOW(), 'col1000');", array($headline, $l_news_c_text10002, $row['owner']));
             db_op_result ($db, $news, __LINE__, __FILE__, $db_logging);
@@ -145,7 +145,7 @@ while (!$sql->EOF)
             $colcount = 500;
             $name = get_player_name($row['owner']);
             $l_news_p_headline2=str_replace("[player]",$name,$l_news_p_headline);
-            $headline = $l_news_p_headline2 . $colcount . $l_news_cols;
+            $headline = $l_news_p_headline2 ." ". $colcount ." ". $l_news_cols;
             $l_news_c_text5002=str_replace("[name]",$name,$l_news_c_text500);
             $news = $db->Execute("INSERT INTO {$db->prefix}news (headline, newstext, user_id, date, news_type) VALUES (?, ?, ?, NOW(), 'col500');", array($headline, $l_news_c_text5002, $row['owner']));
             db_op_result ($db, $news, __LINE__, __FILE__, $db_logging);
@@ -161,7 +161,7 @@ while (!$sql->EOF)
             $colcount = 100;
             $name = get_player_name($row['owner']);
             $l_news_p_headline2=str_replace("[player]",$name,$l_news_p_headline);
-            $headline = $l_news_p_headline2 . $colcount . $l_news_cols;
+            $headline = $l_news_p_headline2 ." ". $colcount ." ". $l_news_cols;
             $l_news_c_text1002=str_replace("[name]",$name,$l_news_c_text100);
             $news = $db->Execute("INSERT INTO {$db->prefix}news (headline, newstext, user_id, date, news_type) VALUES (?, ?, ?, NOW(), 'col100');", array($headline, $l_news_c_text1002, $row['owner']));
             db_op_result ($db, $news, __LINE__, __FILE__, $db_logging);
@@ -177,7 +177,7 @@ while (!$sql->EOF)
             $colcount = 25;
             $name = get_player_name($row['owner']);
             $l_news_p_headline2=str_replace("[player]",$name,$l_news_p_headline);
-            $headline = $l_news_p_headline2 . $colcount . $l_news_cols;
+            $headline = $l_news_p_headline2 ." ". $colcount ." ". $l_news_cols;
             $l_news_c_text252=str_replace("[name]",$name,$l_news_c_text25);
             $news = $db->Execute("INSERT INTO {$db->prefix}news (headline, newstext, user_id, date, news_type) VALUES (?, ?, ?, NOW(), 'col25');", array($headline, $l_news_c_text252, $row['owner']));
             db_op_result ($db, $news, __LINE__, __FILE__, $db_logging);
