@@ -1,6 +1,7 @@
 TheMightyDude (02 August 2012)
 --------------------------------------
 Fixed Notice: Undefined variable: l_igb_invalidamount in igb.php
+Fixed missing gaps in the news headline text.
 
 TheMightyDude (31 July 2012)
 --------------------------------------
